pre-check service checkbox when service card clicked

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wildflower Disability Support Services — Aged Care &amp; Disability Support</title>
+  <title>Wildflower Disability Support Services — NDIS Support in the Lockyer Valley &amp; Ipswich</title>
 
   <!-- Bootstrap 5 -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -70,8 +70,8 @@
             NDIS Registered Provider
           </div>
           <h1>Promoting Independence<br>with Dignity &amp; Care</h1>
-          <p>Wildflower Disability Support Services provides participants with professional services in line with their
-            NDIS goals and funding limits. Welcoming all ages and abilities.</p>
+          <p>Wildflower DSS is a small, family-owned disability support provider offering community access, respite,
+            SIL, domestic assistance &amp; yard maintenance for NDIS participants in the Lockyer Valley, Ipswich &amp; surrounds.</p>
           <div class="d-flex flex-wrap gap-3">
             <a href="#contact" class="btn-primary-custom">
               Get in Touch
@@ -79,7 +79,7 @@
             </a>
             <a href="#services" class="btn-secondary-custom">
               Our Services
-              <i class="bi bi-arrow-down" aria-hidden="true"></i>
+              <i class="bi bi-arrow-right" aria-hidden="true"></i>
             </a>
           </div>
         </div>
@@ -110,14 +110,13 @@
             <span class="section-label"><i class="bi bi-people-fill" aria-hidden="true"></i> Who We Are</span>
             <h2 class="section-title" id="about-heading">Caring for<br>the Community</h2>
             <p class="section-subtitle mb-4">
-              Wildflower Disability Support Services provides participants with professional services in line with their
-              NDIS goals and funding limits. We are caring for the community — promoting independence in everyday life,
-              welcoming all ages and abilities with dignity and care.
+              Wildflower DSS is a small, family-owned disability support provider serving NDIS participants across the
+              Lockyer Valley, Ipswich &amp; surrounds. We promote independence in everyday life with dignity and care.
             </p>
             <p style="color: var(--clr-text-muted); line-height:1.8; margin-bottom: 28px;">
               Our team of qualified and experienced support workers are passionate about making a real difference. We
               take the time to understand your unique needs and create a support plan that works for <em>you</em>.
-              Whether it's help around the home, getting out in the community, respite, or supported independent living
+              Whether it's domestic assistance, getting out in the community, respite, or supported independent living
               — we're here for you.
             </p>
 
@@ -176,66 +175,66 @@
           <span class="section-label"><i class="bi bi-grid-3x3-gap-fill" aria-hidden="true"></i> Our Services</span>
           <h2 class="section-title" id="services-heading">How We Can Help You</h2>
           <p class="section-subtitle mx-auto">
-            We offer a range of NDIS-funded support services tailored to your individual goals. Wildflower DSS is here
-            to help you live your best life.
+            We offer a range of NDIS-funded support services tailored to your individual goals across the Lockyer
+            Valley, Ipswich &amp; surrounds. Wildflower DSS is here to help you live your best life.
           </p>
         </div>
 
         <div class="row g-4 justify-content-center">
           <div class="col-md-6 col-lg-4 fade-up delay-1">
-            <div class="service-card">
+            <a href="?service=domestic#contact" class="service-card">
               <div class="service-icon"><i class="bi bi-house-heart" aria-hidden="true"></i></div>
-              <h3>In Home Supports</h3>
+              <h3>Domestic Assistance</h3>
               <p>Assistance with daily tasks like cooking, cleaning, personal care, and household duties — right in the
                 comfort of your own home.</p>
-              <a href="#contact" class="service-link">
+              <span class="service-link">
                 Enquire Now <i class="bi bi-arrow-right" aria-hidden="true"></i>
-              </a>
-            </div>
+              </span>
+            </a>
           </div>
           <div class="col-md-6 col-lg-4 fade-up delay-2">
-            <div class="service-card">
+            <a href="?service=respite#contact" class="service-card">
               <div class="service-icon"><i class="bi bi-moon-stars" aria-hidden="true"></i></div>
               <h3>Respite / STA</h3>
               <p>Short Term Accommodation and respite services that give family carers a well-deserved break, while your
                 loved one receives outstanding support.</p>
-              <a href="#contact" class="service-link">
+              <span class="service-link">
                 Enquire Now <i class="bi bi-arrow-right" aria-hidden="true"></i>
-              </a>
-            </div>
+              </span>
+            </a>
           </div>
           <div class="col-md-6 col-lg-4 fade-up delay-3">
-            <div class="service-card">
+            <a href="?service=community#contact" class="service-card">
               <div class="service-icon"><i class="bi bi-people" aria-hidden="true"></i></div>
-              <h3>Community Participation</h3>
+              <h3>Community Access</h3>
               <p>We help you stay connected — from social outings and shopping trips to attending appointments, events,
                 and recreational activities.</p>
-              <a href="#contact" class="service-link">
+              <span class="service-link">
                 Enquire Now <i class="bi bi-arrow-right" aria-hidden="true"></i>
-              </a>
-            </div>
+              </span>
+            </a>
           </div>
           <div class="col-md-6 col-lg-4 fade-up delay-4">
-            <div class="service-card">
+            <a href="?service=yard#contact" class="service-card">
               <div class="service-icon"><i class="bi bi-tree" aria-hidden="true"></i></div>
               <h3>Yard Maintenance</h3>
               <p>Keeping your outdoor spaces safe, tidy, and enjoyable with regular lawn mowing, garden care, and
                 general yard upkeep.</p>
-              <a href="#contact" class="service-link">
+              <span class="service-link">
                 Enquire Now <i class="bi bi-arrow-right" aria-hidden="true"></i>
-              </a>
-            </div>
+              </span>
+            </a>
           </div>
           <div class="col-md-6 col-lg-4 fade-up delay-5">
-            <div class="service-card">
+            <a href="?service=sil#contact" class="service-card">
               <div class="service-icon"><i class="bi bi-building" aria-hidden="true"></i></div>
               <h3>Supported Independent Living (SIL)</h3>
               <p>24/7 support in a shared or individual living arrangement, helping you build daily living skills and
                 live as independently as possible.</p>
-              <a href="#contact" class="service-link">
+              <span class="service-link">
                 Enquire Now <i class="bi bi-arrow-right" aria-hidden="true"></i>
-              </a>
-            </div>
+              </span>
+            </a>
           </div>
         </div>
       </div>
@@ -394,8 +393,8 @@
               <div class="contact-detail">
                 <div class="contact-detail-icon"><i class="bi bi-geo-alt" aria-hidden="true"></i></div>
                 <div class="contact-detail-text">
-                  <strong>Office</strong>
-                  <span>123 Care Street, Brisbane QLD 4000</span>
+                  <strong>Service Area</strong>
+                  <span>Lockyer Valley, Ipswich &amp; Surrounds, QLD</span>
                 </div>
               </div>
 
@@ -444,16 +443,35 @@
                     <div class="form-text">Optional, but helps us reach you faster.</div>
                   </div>
                   <div class="col-12">
-                    <label for="service" class="form-label">What service are you interested in?</label>
-                    <select class="form-select" id="service" name="service">
-                      <option value="" selected>— Please select —</option>
-                      <option value="in-home">In Home Supports</option>
-                      <option value="respite">Respite / STA</option>
-                      <option value="community">Community Participation</option>
-                      <option value="yard">Yard Maintenance</option>
-                      <option value="sil">Supported Independent Living (SIL)</option>
-                      <option value="other">Something Else / Not Sure</option>
-                    </select>
+                    <fieldset>
+                      <legend class="form-label">What service are you interested in?</legend>
+                      <div class="service-checkboxes" id="serviceCheckboxes">
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" id="service-domestic" name="service" value="domestic">
+                          <label class="form-check-label" for="service-domestic">Domestic Assistance</label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" id="service-respite" name="service" value="respite">
+                          <label class="form-check-label" for="service-respite">Respite / STA</label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" id="service-community" name="service" value="community">
+                          <label class="form-check-label" for="service-community">Community Access</label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" id="service-yard" name="service" value="yard">
+                          <label class="form-check-label" for="service-yard">Yard Maintenance</label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" id="service-sil" name="service" value="sil">
+                          <label class="form-check-label" for="service-sil">Supported Independent Living (SIL)</label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" id="service-other" name="service" value="other">
+                          <label class="form-check-label" for="service-other">Something Else / Not Sure</label>
+                        </div>
+                      </div>
+                    </fieldset>
                   </div>
                   <div class="col-12">
                     <label for="message" class="form-label">Your Message <span style="color:#c0392b"
@@ -530,8 +548,8 @@
               style="height:80px; width:auto; margin-bottom:8px; display:block;">
           </h5>
           <p style="opacity:0.8; line-height:1.7; font-size:0.95rem;">
-            Providing compassionate disability support and aged care across Brisbane and surrounding areas. NDIS
-            registered provider.
+            A small, family-owned NDIS registered disability support provider serving the Lockyer Valley, Ipswich &amp;
+            surrounds.
           </p>
         </div>
         <div class="col-sm-6 col-lg-2 offset-lg-2">
@@ -545,9 +563,9 @@
         <div class="col-sm-6 col-lg-2">
           <h5>Services</h5>
           <ul class="list-unstyled footer-links">
-            <li><a href="#services">In Home Supports</a></li>
+            <li><a href="#services">Domestic Assistance</a></li>
             <li><a href="#services">Respite / STA</a></li>
-            <li><a href="#services">Community Participation</a></li>
+            <li><a href="#services">Community Access</a></li>
             <li><a href="#services">Yard Maintenance</a></li>
             <li><a href="#services">SIL</a></li>
           </ul>
@@ -558,7 +576,7 @@
             <li><a href="tel:+61467238418">0467 238 418</a></li>
             <li><a href="mailto:wildflowerdss@gmail.com">Email Us</a></li>
             <li><a href="https://facebook.com" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook" aria-hidden="true"></i> Facebook</a></li>
-            <li><span style="opacity:0.7">Brisbane, QLD</span></li>
+            <li><span style="opacity:0.7">Lockyer Valley &amp; Ipswich, QLD</span></li>
           </ul>
         </div>
       </div>
