--- a/index.html
+++ b/index.html
@@ -261,10 +261,9 @@
                 <i class="bi bi-star-fill"></i>
                 <i class="bi bi-star-fill"></i>
               </div>
-              <blockquote>"The carers from Wildflower treat Mum like their own family. We finally feel at peace knowing
-                she's in such wonderful hands."</blockquote>
-              <div class="author">Sarah M.</div>
-              <div class="author-role">Daughter of Client</div>
+              <blockquote>"Wildflower Disability Support Services have been absolutely amazing in caring for my mum. The whole team are so kind, patient, and truly compassionate. They treat her with dignity and respect, and it gives our family so much peace of mind knowing she's in such caring hands. We're so grateful for everything they do. 💜"</blockquote>
+              <div class="author">Kristy</div>
+              <div class="author-role">Family Member</div>
             </div>
           </div>
           <div class="col-lg-4 fade-up delay-2">
