--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 </head>
 
 <body>
+  <!-- Loading Screen -->
+  <div class="loading-screen" id="loadingScreen">
+    <img src="logo.png" alt="Wildflower Disability Support Services">
+  </div>
+
   <!-- Skip Link -->
   <a class="skip-link" href="#main-content">Skip to main content</a>
 
