--- a/index.html
+++ b/index.html
@@ -130,11 +130,12 @@
     <!-- ═══════════ WHO WE ARE ═══════════ -->
     <section id="who-we-are" class="section" aria-labelledby="about-heading">
       <div class="container">
-        <div class="row align-items-center gy-5">
+        <div class="row align-items-start gy-5">
           <div class="col-lg-6 fade-up">
-            <div class="about-img-placeholder" role="img" aria-label="Placeholder for team photo">
-              <span><i class="bi bi-image" style="font-size:2rem;display:block;margin-bottom:8px"></i>Team Photo
-                Placeholder</span>
+            <div class="about-gallery" id="aboutGallery">
+              <div class="about-img-placeholder" id="aboutImg1" role="img" aria-label="Placeholder for team photo">
+                <span><i class="bi bi-image" style="font-size:2rem;display:block;margin-bottom:8px"></i>Photo Placeholder</span>
+              </div>
             </div>
           </div>
           <div class="col-lg-6 fade-up delay-1">
@@ -155,6 +156,7 @@
               <i class="bi bi-arrow-right" aria-hidden="true"></i>
             </a>
           </div>
+          <div class="col-12 d-none d-lg-none" id="aboutSmallGallery"></div>
         </div>
       </div>
     </section>
@@ -346,26 +348,6 @@
         </div>
       </div>
     </section>
-
-    <!-- ═══════════ CTA BANNER ═══════════ -->
-    <div class="cta-banner">
-      <div class="container fade-up">
-        <div class="cta-inner">
-          <h2 id="cta_heading"></h2>
-          <p id="cta_description"></p>
-          <div class="d-flex flex-wrap justify-content-center gap-3">
-            <a id="cta_phone_link" class="btn-primary-custom">
-              <i class="bi bi-telephone-fill" aria-hidden="true"></i>
-              <span id="cta_phone_display"></span>
-            </a>
-            <a href="#contact" class="btn-primary-custom" style="background:var(--clr-primary-dark); color:#fff;">
-              <i class="bi bi-envelope-fill" aria-hidden="true"></i>
-              Send a Message
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
   </main>
 
   <!-- ═══════════ FOOTER ═══════════ -->
