--- a/index.html
+++ b/index.html
@@ -360,6 +360,8 @@
               style="height:80px; width:auto; margin-bottom:8px; display:block;">
           </h5>
           <p id="footer_description" style="opacity:0.8; line-height:1.7; font-size:0.95rem;"></p>
+          <img src="ndis-registered-provider.png" alt="Registered NDIS Provider"
+            style="height:80px; width:auto; margin-top:12px; opacity:0.9;">
         </div>
         <div class="col-sm-6 col-lg-2 offset-lg-2">
           <h5>Quick Links</h5>
