fixes curves and adds gallery

--- a/index.html
+++ b/index.html
@@ -217,6 +217,30 @@
       </div>
     </section>
 
+    <!-- ═══════════ GALLERY ═══════════ -->
+    <section id="gallery" class="section gallery-section" aria-labelledby="gallery-heading">
+      <div class="container">
+        <div class="text-center mb-5 fade-up">
+          <span class="section-label">
+            <i class="bi" id="gallery_label_icon" aria-hidden="true"></i>
+            <span id="gallery_label"></span>
+          </span>
+          <h2 class="section-title" id="gallery_heading"></h2>
+          <p class="section-subtitle mx-auto" id="gallery_subtitle"></p>
+          <a href="https://facebook.com" id="gallery_facebook" class="btn-outline-warm mt-3" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-facebook" aria-hidden="true"></i> Follow Us on Facebook
+          </a>
+        </div>
+        <div id="gallerySplide" class="splide fade-up" aria-label="Image Gallery">
+          <div class="splide__track">
+            <ul class="splide__list" id="gallery_grid">
+              <!-- Slides generated from gallery.csv -->
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- ═══════════ CONTACT ═══════════ -->
     <section id="contact" class="section" aria-labelledby="contact-heading">
       <div class="container">
