moves gallery FB button to below images

--- a/index.html
+++ b/index.html
@@ -227,9 +227,6 @@
           </span>
           <h2 class="section-title" id="gallery_heading"></h2>
           <p class="section-subtitle mx-auto" id="gallery_subtitle"></p>
-          <a href="https://facebook.com" id="gallery_facebook" class="btn-outline-warm mt-3" target="_blank" rel="noopener noreferrer">
-            <i class="bi bi-facebook" aria-hidden="true"></i> Follow Us on Facebook
-          </a>
         </div>
         <div id="gallerySplide" class="splide fade-up" aria-label="Image Gallery">
           <div class="splide__track">
@@ -237,6 +234,11 @@
               <!-- Slides generated from gallery.csv -->
             </ul>
           </div>
+        </div>
+        <div class="text-center mt-5 fade-up">
+          <a href="https://facebook.com" id="gallery_facebook" class="btn-outline-warm mt-3" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-facebook" aria-hidden="true"></i> Follow us on Facebook
+          </a>
         </div>
       </div>
     </section>
