--- a/index.html
+++ b/index.html
@@ -36,72 +36,64 @@
   <a class="skip-link" href="#main-content">Skip to main content</a>
 
   <!-- ═══════════ NAVBAR ═══════════ -->
-  <nav class="navbar navbar-expand-lg fixed-top" aria-label="Main navigation">
+  <div class="navbar-logo-wrapper">
     <div class="container">
-      <span class="navbar-brand">
+      <a href="#top" class="navbar-logo-bookmark">
         <img src="nav_logo.svg" alt="Wildflower Disability Support Services logo">
-      </span>
+      </a>
+    </div>
+  </div>
+  <nav class="navbar navbar-expand-lg fixed-top" aria-label="Main navigation">
+    <div class="container navbar-inner">
+    <div class="navbar-island">
+      <!-- Mobile menu (behind island content) -->
+      <div id="menuContainer" class="menu-container d-lg-none" role="dialog" aria-modal="true" aria-label="Navigation menu">
+        <ul class="menu-nav">
+          <li><a class="menu-link" href="#who-we-are">Who We Are</a></li>
+          <li><a class="menu-link" href="#services">Our Services</a></li>
+          <li><a class="menu-link" href="#team">Our Team</a></li>
+          <li><a class="menu-link" href="#contact">Contact</a></li>
+          <li>
+            <a class="menu-link menu-link-social" id="menu_facebook" href="https://facebook.com" target="_blank"
+              rel="noopener noreferrer">
+              <i class="bi bi-facebook" aria-hidden="true"></i> Facebook
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- Mobile: contact button + menu toggler -->
+      <a class="nav-link nav-cta d-lg-none me-2" href="#contact" id="mobileContactBtn">Contact</a>
+      <button class="navbar-toggler d-lg-none" type="button" id="menuToggle"
+        aria-haspopup="menu" aria-controls="menuContainer" aria-expanded="false"
+        aria-label="Toggle navigation menu">
+        <span class="toggler-bars">
+          <span class="toggler-bar"></span>
+          <span class="toggler-bar"></span>
+          <span class="toggler-bar"></span>
+        </span>
+        <span class="toggler-label">MENU</span>
+      </button>
       <!-- Desktop nav -->
-      <ul class="navbar-nav ms-auto align-items-center gap-1 d-none d-lg-flex flex-row">
+      <ul class="navbar-nav align-items-center gap-1 d-none d-lg-flex flex-row">
         <li class="nav-item"><a class="nav-link" href="#who-we-are">Who We Are</a></li>
         <li class="nav-item"><a class="nav-link" href="#services">Our Services</a></li>
         <li class="nav-item"><a class="nav-link" href="#team">Our Team</a></li>
         <li class="nav-item ms-2">
           <a class="nav-link nav-cta" href="#contact">Contact</a>
         </li>
-        <li class="nav-item ms-1">
-          <a class="nav-link nav-social" id="nav_facebook" href="https://facebook.com" target="_blank"
-            rel="noopener noreferrer" aria-label="Visit us on Facebook">
-            <i class="bi bi-facebook" aria-hidden="true"></i>
-          </a>
-        </li>
       </ul>
-      <!-- Mobile: contact button + menu toggler -->
-      <a class="nav-link nav-cta d-lg-none ms-auto me-2" href="#contact" id="mobileContactBtn">Contact</a>
-      <button class="navbar-toggler d-lg-none" type="button" id="openMenu"
-        aria-haspopup="menu" aria-controls="menuContainer" aria-expanded="false"
-        aria-label="Open navigation menu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    </div>
     </div>
   </nav>
 
   <!-- Menu overlay -->
-  <div class="menu-overlay" id="menuOverlay"></div>
-
-  <!-- Mobile menu -->
-  <div id="menuContainer" class="menu-container" role="dialog" aria-modal="true" aria-label="Navigation menu">
-    <div class="menu-header">
-      <span class="navbar-brand">
-        <img src="nav_logo.svg" alt="Wildflower Disability Support Services logo">
-      </span>
-      <button id="closeMenu" class="menu-close-btn" aria-label="Close navigation menu">
-        <i class="bi bi-x-lg" aria-hidden="true"></i>
-      </button>
-    </div>
-    <ul class="menu-nav">
-      <li><a class="menu-link" href="#who-we-are">Who We Are</a></li>
-      <li><a class="menu-link" href="#services">Our Services</a></li>
-      <li><a class="menu-link" href="#team">Our Team</a></li>
-      <li><a class="menu-link" href="#contact">Contact</a></li>
-      <li>
-        <a class="menu-link menu-link-social" id="menu_facebook" href="https://facebook.com" target="_blank"
-          rel="noopener noreferrer">
-          <i class="bi bi-facebook" aria-hidden="true"></i> Facebook
-        </a>
-      </li>
-    </ul>
-  </div>
+  <div class="menu-overlay d-lg-none" id="menuOverlay"></div>
 
   <!-- ═══════════ HERO ═══════════ -->
   <header class="hero" id="top" role="banner">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-6 hero-content">
-          <div class="hero-badge">
-            <i class="bi bi-shield-check" aria-hidden="true"></i>
-            <span id="hero_badge"></span>
-          </div>
+        <div class="col-lg-6 hero-content d-flex flex-column align-items-start">
           <h1 id="hero_heading"></h1>
           <p id="hero_description"></p>
           <div class="d-flex flex-wrap gap-3">
