mobile menu accessibility

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container navbar-inner">
     <div class="navbar-island">
       <!-- Mobile menu (behind island content) -->
-      <div id="menuContainer" class="menu-container d-lg-none" role="dialog" aria-modal="true" aria-label="Navigation menu">
+      <div id="menuContainer" class="menu-container d-lg-none" role="dialog" aria-modal="true" aria-label="Navigation menu" aria-hidden="true">
         <ul class="menu-nav">
           <li><a class="menu-link" href="#who-we-are">Who We Are</a></li>
           <li><a class="menu-link" href="#services">Our Services</a></li>
@@ -65,7 +65,7 @@
       <!-- Mobile: contact button + menu toggler -->
       <a class="nav-link nav-cta d-lg-none me-2" href="#contact" id="mobileContactBtn">Contact</a>
       <button class="navbar-toggler d-lg-none" type="button" id="menuToggle"
-        aria-haspopup="menu" aria-controls="menuContainer" aria-expanded="false"
+        aria-haspopup="dialog" aria-controls="menuContainer" aria-expanded="false"
         aria-label="Toggle navigation menu">
         <span class="toggler-bars">
           <span class="toggler-bar"></span>
